# Parallel-Algorithms

term-project/van_quach_and_andy_yang/docs/: LU Factorization using CUDA.docx  LU Factorization using GPU.pptx
term-project/van_quach_and_andy_yang/src/: CMakeLists.txt  main.cpp
term-project/van_quach_and_andy_yang/src/lib/: matrixUtils.cpp  matrixUtils.h
